added sample new files

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Backtracking</title>
   </head>
   <body>
+    <!-- We are checking wheter the number increases on the side while changing the files -->
     <h1>Backtracking</h1>
     <p><mark> Copyright &#169; by David Matuzsek</mark></p>
     <p><strong>Backtracking</strong> is a form of <em> recursion</em></p>
