--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   </head>
   <body>
     <!-- We are checking wheter the number increases on the side while changing the files -->
+    <p>Here we are dealing with sample input for git</p>
+    <h2>Hello everyone</h2>
     <h1>Backtracking</h1>
     <p><mark> Copyright &#169; by David Matuzsek</mark></p>
     <p><strong>Backtracking</strong> is a form of <em> recursion</em></p>
